--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -915,6 +915,30 @@ pre {
 table {
   border: none; }
 
+.links {
+    text-align: center;
+    font-size: 20px;
+    color: black;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    width: 200px;
+    display: block;
+    margin: 0 auto;
+    transition duration: 0.5s;
+    box-shadow: 5px 5px 5px black;
+    border-radius: 15px;
+
+}
+
+.links:hover {
+    background-color: black;
+    color: white;
+    box-shadow: 0px 0px 0px black;
+
+    
+}
+
 .section-number-1, .section-number-2,
 .section-number-3, .section-number-4,
 .section-number-5, .section-number-6 {
