--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -920,12 +920,13 @@ table {
     font-size: 20px;
     color: black;
     box-sizing: border-box;
-        border: 1px solid black;
+    border: 1px solid black;
     padding: 10px;
     margin: 10px;
     width: 200px;
     height: 200px;
     display: flex;
+    align-items: center;
     justify-content: center;
     text-transform: uppercase;
     margin: 0 auto;
