--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -915,31 +915,34 @@ pre {
 table {
   border: none; }
 
-.links {
+.Links {
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     color: black;
     box-sizing: border-box;
     border: 1px solid black;
     padding: 10px;
-    margin: 10px;
     width: 200px;
     height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-transform: uppercase;
-    margin: 0 auto;
-    transition duration: 0.5s;
+    transition: all 0.5s;
     box-shadow: 5px 5px 5px black;
     border-radius: 15px;
-
+    margin-right: 20px;
 }
 
-.links:hover {
+.Links:hover {
     background-color: black;
     color: white;
     box-shadow: 0px 0px 0px black;
+}
+
+.Links:active {
+    box-shadow: inset 5px 5px 5px black;
+}
 
     
 }
