--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -915,6 +915,11 @@ pre {
 table {
   border: none; }
 
+.container {
+  display:flex;
+  flex-direction: row;
+}
+
 .Links {
     text-align: center;
     font-size: 25px;
@@ -924,7 +929,6 @@ table {
     padding: 10px;
     width: 200px;
     height: 200px;
-    display: flex;
     align-items: center;
     justify-content: center;
     text-transform: uppercase;
